[package]
name = "bevy_slam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_obj = "0.10.1"
crossbeam-channel = "0.5.8"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }

[[bin]]
name = "frontend" 
path = "src/frontend.rs"

