[package]
name = "bevy_slam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_obj = "0.10.1"
crossbeam-channel = "0.5.8"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }
csv = "1.2.1"
image = "0.24.6"
imageproc = "0.23.0"
opencv = "0.82.0"
nalgebra = "0.32.2"
rosrust = "0.9.11"
rosrust_msg = "0.1.7"

[[bin]]
name = "frontend" 
path = "src/frontend.rs"

[[bin]]
name = "slam_node" 
path = "src/slam_node.rs"
